--- a/Configs/.config/VSCodium/User/settings.json
+++ b/Configs/.config/VSCodium/User/settings.json
@@ -1,6 +1,5 @@
 {
-  "workbench.colorTheme": "Wallbash",
-  "window.menuBarVisibility": "toggle",
+  "workbench.colorTheme": "Adey Coder - Deep Dark",
   "editor.fontSize": 12,
   "editor.scrollbar.vertical": "hidden",
   "editor.scrollbar.verticalScrollbarSize": 0,
@@ -17,5 +16,18 @@
   "telemetry.telemetryLevel": "off",
   "workbench.activityBar.location": "top",
   "window.customTitleBarVisibility": "auto",
-  "workbench.sideBar.location": "right"
+  "window.menuBarVisibility": "toggle",
+  "chat.commandCenter.enabled": false,
+  "workbench.startupEditor": "none",
+  "codium.enterprise.onPremService.enable": true,
+  "codium.codeCompletion.enable": true,
+  "git.enableSmartCommit": true,
+  "git.confirmSync": false,
+  "git.autofetch": true,
+  "explorer.confirmDelete": false,
+  "editor.minimap.enabled": false,
+  "extensions.experimental.affinity": {
+    "asvetliakov.vscode-neovim": 1
+  },
+  "explorer.confirmDragAndDrop": false
 }
