--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -1,127 +1,124 @@
-/*
-HyDE provides xdg/share/fastfetch/presets/hyde/*.config.jsonc files for different layouts. 
-You can also create your own config.jsonc file in the same directory to create a custom theme. 
-
-To test HyDE's fastfetch theme, run:
-fastfetch --config hyde/*.jsonc
-
-*/
 {
-  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-  "logo": {
-    "source": "$(fastfetch.sh logo)",
-    "height": 18
-  },
-  "display": {
-    "separator": " : "
-  },
-  "modules": [
-    {
-      "type": "command",
-      "key": "  ",
-      "keyColor": "blue",
-      "text": "splash=$(hyprctl splash);echo $splash"
+    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+        "source": "~/.config/fastfetch/loli.icon",
+        "type": "kitty",
+        "height": 13,
+        "width": 26,
+        "padding": {
+            "top": 5,
+            "left": 3
+        }
     },
-    {
-      "type": "custom",
-      "format": "┌──────────────────────────────────────────┐"
+    "display": {
+        "color": {
+            "separator": "blue"
+        },
+        "separator": " | "
     },
-    {
-      "type": "chassis",
-      "key": "  󰇺 Chassis",
-      "format": "{1} {2} {3}"
-    },
-    {
-      "type": "os",
-      "key": "  󰣇 OS",
-      "format": "{2}",
-      "keyColor": "red"
-    },
-    {
-      "type": "kernel",
-      "key": "   Kernel",
-      "format": "{2}",
-      "keyColor": "red"
-    },
-    {
-      "type": "packages",
-      "key": "  󰏗 Packages",
-      "keyColor": "green"
-    },
-    {
-      "type": "display",
-      "key": "  󰍹 Display",
-      "format": "{1}x{2} @ {3}Hz [{7}]",
-      "keyColor": "green"
-    },
-    {
-      "type": "terminal",
-      "key": "   Terminal",
-      "keyColor": "yellow"
-    },
-    {
-      "type": "wm",
-      "key": "  󱗃 WM",
-      "format": "{2}",
-      "keyColor": "yellow"
-    },
-    {
-      "type": "custom",
-      "format": "└──────────────────────────────────────────┘"
-    },
-    "break",
-    {
-      "type": "title",
-      "key": "  ",
-      "format": "{6} {7} {8}"
-    },
-    {
-      "type": "custom",
-      "format": "┌──────────────────────────────────────────┐"
-    },
-    {
-      "type": "cpu",
-      "format": "{1} @ {7}",
-      "key": "   CPU",
-      "keyColor": "blue"
-    },
-    {
-      "type": "gpu",
-      "format": "{1} {2}",
-      "key": "  󰊴 GPU",
-      "keyColor": "blue"
-    },
-    {
-      "type": "gpu",
-      "format": "{3}",
-      "key": "   GPU Driver",
-      "keyColor": "magenta"
-    },
-    {
-      "type": "memory",
-      "key": "   Memory ",
-      "keyColor": "magenta"
-    },
-    {
-      "type": "command",
-      "key": "  󱦟 OS Age ",
-      "keyColor": "red",
-      "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
-    },
-    {
-      "type": "uptime",
-      "key": "  󱫐 Uptime ",
-      "keyColor": "red"
-    },
-    {
-      "type": "custom",
-      "format": "└──────────────────────────────────────────┘"
-    },
-    {
-      "type": "colors",
-      "paddingLeft": 2,
-      "symbol": "circle"
-    },
-    "break"
-  ]
+    "modules": [
+        "break",
+        "break",
+        {
+            "type": "kernel",
+            "key": "    HyDE    ",
+            "keyColor": "magenta"
+        },
+        {
+            "type": "custom",
+            "format": ">-----------<+>------------------------------------------<",
+            "outputColor": "separator"
+        },
+        {
+            "type": "host",
+            "key": "  MRB      ",
+            "keyColor": "cyan"
+        },
+        {
+            "type": "memory",
+            "key": "  RAM      ",
+            "keyColor": "cyan"
+        },
+        {
+            "type": "cpu",
+            "key": "󰍛  CPU      ",
+            "showPeCoreCount": true,
+            "keyColor": "cyan"
+        },
+        {
+            "type": "gpu",
+            "key": "󰍛  GPU      ",
+            "keyColor": "cyan"
+            //      "text": "lspci | grep -i vga | awk -F': | \\\\[|\\\\]' '{print $2 \" [\" $3 \"]\"}'"
+        },
+        //    {
+        //      "type": "disk",
+        //      "key": "󰉉  Disk     ",
+        //      "keyColor": "cyan",
+        //    },
+        {
+            "type": "custom",
+            "format": ">-----------<+>------------------------------------------<",
+            "outputColor": "separator"
+        },
+        {
+            "type": "wmtheme",
+            "key": "󰉼  Theme    ",
+            "keyColor": "green"
+        },
+        {
+            "type": "shell",
+            "key": "  Shell    ",
+            "keyColor": "green"
+        },
+        {
+            "type": "wm",
+            "key": "  Session  ",
+            "keyColor": "green"
+        },
+        {
+            "type": "terminal",
+            "key": "  Terminal ",
+            "keyColor": "green"
+        },
+        {
+            "type": "de",
+            "key": "  Desktop  ",
+            "keyColor": "green"
+        },
+        {
+            "type": "packages",
+            "key": "󰏖  Packages ",
+            "keyColor": "green"
+        },
+        {
+            "type": "gpu",
+            "key": "󰍛  G-Driver ",
+            "format": "{3}",
+            "keyColor": "green"
+        },
+        {
+            "type": "custom",
+            "format": ">-----------<+>------------------------------------------<",
+            "outputColor": "separator"
+        },
+        {
+            "type": "command",
+            "key": "󰅐  OS Age   ",
+            "keyColor": "blue",
+            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+        },
+        {
+            "type": "uptime",
+            "key": "󰅐  Uptime   ",
+            "keyColor": "blue"
+        },
+        {
+            "type": "custom",
+            "format": ">-----------<+>------------------------------------------<",
+            "outputColor": "separator"
+        },
+        "break",
+        "break"
+    ]
 }
