--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -17,59 +17,59 @@
 
 #*  Variables 
 # Default if commented out
-# $mainMod = Super # super / meta / windows key
+$mainMod = Super # super / meta / windows key
+
 # Assign apps
-# $TERMINAL = kitty
-# $EDITOR = code
-# $EXPLORER = dolphin
+$TERMINAL = kitty
+$EDITOR = vscodium
+$EXPLORER = dolphin
 # $BROWSER = firefox
 
 $wm=Window Management
 $d=[$wm]
 bindd = $mainMod, Q, $d close focused window, exec, $scrPath/dontkillsteam.sh
-bindd = Alt, F4, $d close focused window, exec, $scrPath/dontkillsteam.sh
+bindd = $mainMod Shift, Q, $d kill active proccess, exec, $scrPath/killactive.sh 
 bindd = $mainMod, Delete, $d kill hyprland session, exit
-bindd = $mainMod, W, $d toggle float, togglefloating, #
+bindd = $mainMod, Space, $d toggle float, togglefloating
+bind = $mainMod, F, fullscreen, 1
+bindd = $mainMod Shift, F, $d toggle fullscreen, fullscreen
 bindd = $mainMod, G, $d toggle group, togglegroup
-bindd = Shift, F11, $d toggle fullscreen, fullscreen
 bindd = $mainMod, L, $d lock screen, exec, lockscreen.sh
-bindd = $mainMod Shift, F, $d toggle pin on focused window, exec, $scrPath/windowpin.sh
-bindd = Control Alt, Delete, $d logout menu, exec, $scrPath/logoutlaunch.sh
-bindd = Alt_R, Control_R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
-# bindd = ALT_R, Control_R,toggle waybar, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
+bindd = $mainMod, Escape, $d logout menu, exec, $scrPath/logoutlaunch.sh
+bindd = $mainMod, R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
+##      bindd = $mainMod, R, $d toggle waybar, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
+##      bindd = $mainMod Shift, F, $d toggle pin on focused window, exec, $scrPath/windowpin.sh
 
-$d=[$wm|Group Navigation]
-bindd = $mainMod Control, H, $d change active group backwards   , changegroupactive, b
-bindd = $mainMod Control, L, $d change active group forwards  , changegroupactive, f
+
 
 $d=[$wm|Change focus]
 bindd = $mainMod, Left, $d focus left, movefocus, l
 bindd = $mainMod, Right, $d focus right , movefocus, r
 bindd = $mainMod, Up, $d focus up , movefocus, u
 bindd = $mainMod, Down , $d focus down, movefocus, d
-# bindd = Alt, TAB, $d focus , movefocus, d,
+##      bindd = Alt, TAB, $d focus , movefocus, d,
 
 $d=[$wm|Resize Active Window]
 # Resize windows
-bindde = $mainMod Shift, Right, $d resize window right , resizeactive, 30 0
-bindde = $mainMod Shift, Left, $d resize window left, resizeactive, -30 0
-bindde = $mainMod Shift, Up, $d resize window up, resizeactive, 0 -30
-bindde = $mainMod Shift, Down, $d resize  window down, resizeactive, 0 30
+bindde = $mainMod Control, Right, $d resize window right , resizeactive, 30 0
+bindde = $mainMod Control, Left, $d resize window left, resizeactive, -30 0
+bindde = $mainMod Control, Up, $d resize window up, resizeactive, 0 -30
+bindde = $mainMod Control, Down, $d resize  window down, resizeactive, 0 30
 
 # Move active window around current workspace with mainMod + Shift + Control [←→↑↓]
 $d=[$wm|Move active window across workspace]
 $moveactivewindow=grep -q "true" <<< $(hyprctl activewindow -j | jq -r .floating) && hyprctl dispatch moveactive
-bindde = $mainMod Shift Control, left, Move active window to the left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l
-bindde = $mainMod Shift Control, right, Move active window to the right, exec, $moveactivewindow 30 0 || hyprctl dispatch movewindow r
-bindde = $mainMod Shift Control, up, Move active window up, exec, $moveactivewindow  0 -30 || hyprctl dispatch movewindow u
-bindde = $mainMod Shift Control, down, Move active window down, exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d
+bindde = $mainMod Shift, left, Move activewindow to the left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l
+bindde = $mainMod Shift, right, Move activewindow to the right, exec, $moveactivewindow 30 0 || hyprctl dispatch movewindow r
+bindde = $mainMod Shift, up, Move activewindow up, exec, $moveactivewindow  0 -30 || hyprctl dispatch movewindow u
+bindde = $mainMod Shift, down, Move activewindow down, exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d
 
 # Move/Resize focused window
 $d=[$wm|Move & Resize with mouse]
 binddm = $mainMod, mouse:272, $d hold to move window, movewindow
 binddm = $mainMod, mouse:273, $d hold to resize window, resizewindow
-binddm = $mainMod, Z, $d hold to move window , movewindow
-binddm = $mainMod, X, $d hold to resize window, resizewindow
+##       binddm = $mainMod, Z, $d hold to move window , movewindow
+##       binddm = $mainMod, X, $d hold to resize window, resizewindow
 
 # Toggle focused window split
 $d=[$wm]
@@ -77,70 +77,73 @@ bindd = $mainMod, J, $d toggle split, togglesplit
 
 $l=Launcher
 $d=[$l|Apps]
-bindd = $mainMod, T, $d terminal emulator , exec, $TERMINAL
-bindd = $mainMod, E, $d file explorer , exec, $EXPLORER
-bindd = $mainMod, C, $d text editor , exec, $EDITOR
+bindd = $mainMod, Return, $d terminal emulator , exec, $TERMINAL
+bindd = $mainMod, T, $d file explorer , exec, $EXPLORER
+bindd = $mainMod, E, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
-bindd = Control Shift, Escape, $d system monitor , exec, $scrPath/sysmonlaunch.sh
+##      bindd = $mainMod, =, $d system monitor , exec, $scrPath/sysmonlaunch.sh
 
 $d=[$l|Rofi menus]
 $rofi-launch=$scrPath/rofilaunch.sh
 bindd = $mainMod, A, $d application finder , exec, pkill -x rofi || $rofi-launch d
+bindd = $mainMod Shift, A, $d select rofi launcher , exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu
 bindd = $mainMod, TAB, $d window switcher , exec, pkill -x rofi || $rofi-launch w
-bindd = $mainMod Shift, E, $d file finder , exec, pkill -x rofi || $rofi-launch f
-bindd = $mainMod, slash, $d keybindings hint, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
-bindd = $mainMod, comma, $d emoji  picker , exec, pkill -x rofi || $scrPath/emoji-picker.sh # launch emoji picker
-bindd = $mainMod, period, $d glyph picker , exec, pkill -x rofi || $scrPath/glyph-picker.sh # launch glyph picker
+bindd = $mainMod Shift, TAB, $d file finder , exec, pkill -x rofi || $rofi-launch f
+bindd = $mainMod Shift, E, $d emoji  picker , exec, pkill -x rofi || $scrPath/emoji-picker.sh # launch emoji picker
+bindd = $mainMod Alt, E, $d glyph picker , exec, pkill -x rofi || $scrPath/glyph-picker.sh # launch glyph picker
 bindd = $mainMod, V, $d clipboard ,  exec, pkill -x rofi || $scrPath/cliphist.sh -c # launch clipboard,
 bindd = $mainMod Shift, V, $d clipboard manager , exec, pkill -x rofi || $scrPath/cliphist.sh # launch clipboard Manager
-bindd = $mainMod Shift, A, $d select rofi launcher , exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu
-
+##      bindd = $mainMod, slash, $d keybindings hint, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
 
 $hc=Hardware Controls
 $d=[$hc|Audio]
-binddl  = , F10, $d toggle mute output , exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-binddl  = , XF86AudioMute,$d  toggle mute output, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
-binddel = , F11, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
-binddel = , F12, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
-binddl  = , XF86AudioMicMute,$d un/mute microphone  , exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
-binddel = , XF86AudioLowerVolume, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
-binddel = , XF86AudioRaiseVolume, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
+binddl  = , xf86AudioMute,$d  toggle mute output, exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
+binddl  = , xf86AudioMicMute,$d un/mute microphone  , exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
+binddel = , xf86AudioLowerVolume, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
+binddel = , xf86AudioRaiseVolume, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
+##       binddl  = , F10, $d toggle mute output , exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
+##       binddel = , F11, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
+##       binddel = , F12, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
 
 $d=[$hc|Media]
-binddl  = , XF86AudioPlay,$d play media, exec, playerctl play-pause # toggle between media play and pause
-binddl  = , XF86AudioPause,$d pause media, exec, playerctl play-pause # toggle between media play and pause
-binddl  = , XF86AudioNext,$d next media  , exec, playerctl next # media next
-binddl  = , XF86AudioPrev,$d  previous media , exec, playerctl previous # media previous
+bindl = , xf86AudioPlayPause, exec, playerctl play-pause
+bindl = , xf86AudioPause, exec, playerctl play-pause
+bindl = , xf86AudioPlay, exec, playerctl play-pause
+bindl = , xf86AudioNext, exec, playerctl next
+bindl = , xf86AudioPrev, exec, playerctl previous
+bindl = , xf86audiostop, exec, playerctl stop
 
 $d=[$hc|Brightness]
-binddel = , XF86MonBrightnessUp, $d increase brightness , exec, $scrPath/brightnesscontrol.sh i # increase brightness
-binddel = , XF86MonBrightnessDown, $d decrease brightness , exec, $scrPath/brightnesscontrol.sh d # decrease brightness
+binddel = , xf86MonBrightnessUp, $d increase brightness , exec, $scrPath/brightnesscontrol.sh i # increase brightness
+binddel = , xf86MonBrightnessDown, $d decrease brightness , exec, $scrPath/brightnesscontrol.sh d # decrease brightness
 
+$d=[$hc|Macro]
+bind = , xf86Launch1, exec, rog-control-center # Asus Armory Crate button
+bind = , xf86Launch3, exec, asusctl aura -n    # FN+F4 Switch keyboard profiles
+bind = , xf86Launch4, exec, asusctl profile -n # FN+F5 Fan Profiles
 
 $ut=Utilities
 $d=[$ut]
-binddl = $mainMod, K, $d toggle keyboard layout , exec, $scrPath/keyboardswitch.sh # switch keyboard layout
-bindd = $mainMod Alt, G, $d game mode , exec, $scrPath/gamemode.sh # disable hypr effects for gamemode
+bindd = $mainMod Shift, G, $d game mode , exec, $scrPath/gamemode.sh # disable hypr effects for gamemode
+##       binddl = $mainMod, K, $d toggle keyboard layout , exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 
 $d=[$ut|Screen Capture]
-bindd = $mainMod Shift, P, $d color picker, exec, hyprpicker -an # Pick color (Hex) >> clipboard#
-bindd = $mainMod, P, $d snip screen , exec, $scrPath/screenshot.sh s # partial screenshot capture
-bindd = $mainMod Control, P, $d freeze and snip screen, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
-binddl = $mainMod Alt, P, $d print monitor , exec, $scrPath/screenshot.sh m # monitor screenshot capture
-binddl = , Print, $d print all monitors , exec, $scrPath/screenshot.sh p # all monitors screenshot capture
+bindd = $mainMod, P, $d color picker, exec, hyprpicker -an # Pick color (Hex) >> clipboard#
+bindd = $mainMod, Print, $d freeze and snip screen, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
+binddl = , Print, $d print monitor , exec, $scrPath/screenshot.sh m # monitor screenshot capture
+binddl = $mainMod Shift, Print, $d print all monitors , exec, $scrPath/screenshot.sh p # all monitors screenshot capture
+##       bindd = $mainMod, P, $d snip screen , exec, $scrPath/screenshot.sh s # partial screenshot capture
 
 # TODO Make a main rofi menu for these selectors
 $rice=Theming and Wallpaper
 $d=[$rice]
-bindd = $mainMod Alt, Right, $d next global wallpaper , exec, $scrPath/wallpaper.sh -Gn # next global wallpaper
-bindd = $mainMod Alt, Left, $d previous global wallpaper , exec, $scrPath/wallpaper.sh -Gp # previous global wallpaper
-bindd = $mainMod Shift, W, $d select a global wallpaper , exec, pkill -x rofi || $scrPath/wallpaper.sh -SG # launch wallpaper select menu
-bindd = $mainMod Alt, Up, $d next waybar layout , exec, $scrPath/wbarconfgen.sh n # next waybar mode
-bindd = $mainMod Alt, Down, $d previous waybar layout , exec, $scrPath/wbarconfgen.sh p # previous waybar mode
-bindd = $mainMod Shift, R, $d wallbash mode selector , exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
-bindd = $mainMod Shift, T, $d select a theme, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
-
-
+bindd = $mainMod, W, $d select a global wallpaper , exec, pkill -x rofi || $scrPath/wallpaper.sh -SG # launch wallpaper select menu
+bindd = $mainMod, K, $d next waybar layout , exec, $scrPath/wbarconfgen.sh n # next waybar mode
+bindd = $mainMod Shift, K, $d previous waybar layout , exec, $scrPath/wbarconfgen.sh p # previous waybar mode
+bindd = $mainMod Shift, Backspace, $d wallbash mode selector , exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
+bindd = $mainMod, Backspace, $d select a theme, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
+##      bindd = $mainMod Alt, Right, $d next global wallpaper , exec, $scrPath/wallpaper.sh -Gn # next global wallpaper
+##      bindd = $mainMod Alt, Left, $d previous global wallpaper , exec, $scrPath/wallpaper.sh -Gp # previous global wallpaper
 
 $ws=Workspaces
 $d=[$ws|Navigation]
@@ -155,12 +158,6 @@ bindd = $mainMod, 8, $d navigate to workspace 8 , workspace, 8
 bindd = $mainMod, 9, $d navigate to workspace 9 , workspace, 9
 bindd = $mainMod, 0, $d navigate to workspace 10 , workspace, 10
 
-$d=[$ws|Navigation|Relative workspace]
-bindd = $mainMod Control, Right, $d change active workspace forwards  , workspace, r+1
-bindd = $mainMod Control, Left, $d change active workspace backwards , workspace, r-1
-
-$d=[$ws|Navigation]
-bindd = $mainMod Control, Down, $d navigate to the nearest empty workspace , workspace, empty
 
 # Move focused window to a workspace
 $d=[$ws|Move window to workspace]
@@ -175,37 +172,44 @@ bindd = $mainMod Shift, 8, $d move to workspace 8 , movetoworkspace, 8
 bindd = $mainMod Shift, 9, $d move to workspace 9 , movetoworkspace, 9
 bindd = $mainMod Shift, 0, $d move to workspace 10 , movetoworkspace, 10
 
-# Move focused window to a relative workspace
-$d=[$ws]
-bindd = $mainMod Control+Alt, Right, $d move window to next relative workspace , movetoworkspace, r+1
-bindd = $mainMod Control+Alt, Left, $d move window to previous relative workspace , movetoworkspace, r-1
-
-
-# Scroll through existing workspaces
-$d=[$ws|Navigation]
-bindd = $mainMod, mouse_down, $d next workspace, workspace, e+1
-bindd = $mainMod, mouse_up, $d previous workspace, workspace, e-1
-
-
 # Move/Switch to special workspace (scratchpad)
 $d=[$ws|Navigation|Special workspace]
 bindd = $mainMod Shift, S, $d move to scratchpad  , movetoworkspace, special
-bindd = $mainMod Alt, S, $d move to scratchpad (silent) , movetoworkspacesilent, special
 bindd = $mainMod, S, $d toggle scratchpad ,  togglespecialworkspace
+##      bindd = $mainMod Alt, S, $d move to scratchpad (silent) , movetoworkspacesilent, special
 
 # Move focused window to a workspace silently
-$d=[$ws|Navigation|Move window silently]
-bindd = $mainMod Alt, 1, $d move to workspace 1  (silent), movetoworkspacesilent, 1
-bindd = $mainMod Alt, 2, $d move to workspace 2  (silent), movetoworkspacesilent, 2
-bindd = $mainMod Alt, 3, $d move to workspace 3  (silent), movetoworkspacesilent, 3
-bindd = $mainMod Alt, 4, $d move to workspace 4  (silent), movetoworkspacesilent, 4
-bindd = $mainMod Alt, 5, $d move to workspace 5  (silent), movetoworkspacesilent, 5
-bindd = $mainMod Alt, 6, $d move to workspace 6  (silent), movetoworkspacesilent, 6
-bindd = $mainMod Alt, 7, $d move to workspace 7  (silent), movetoworkspacesilent, 7
-bindd = $mainMod Alt, 8, $d move to workspace 8  (silent), movetoworkspacesilent, 8
-bindd = $mainMod Alt, 9, $d move to workspace 9  (silent), movetoworkspacesilent, 9
-bindd = $mainMod Alt, 0, $d move to workspace 10 (silent), movetoworkspacesilent, 10
+##      $d=[$ws|Navigation|Move window silently]
+##      bindd = $mainMod Alt, 1, $d move to workspace 1  (silent), movetoworkspacesilent, 1
+##      bindd = $mainMod Alt, 2, $d move to workspace 2  (silent), movetoworkspacesilent, 2
+##      bindd = $mainMod Alt, 3, $d move to workspace 3  (silent), movetoworkspacesilent, 3
+##      bindd = $mainMod Alt, 4, $d move to workspace 4  (silent), movetoworkspacesilent, 4
+##      bindd = $mainMod Alt, 5, $d move to workspace 5  (silent), movetoworkspacesilent, 5
+##      bindd = $mainMod Alt, 6, $d move to workspace 6  (silent), movetoworkspacesilent, 6
+##      bindd = $mainMod Alt, 7, $d move to workspace 7  (silent), movetoworkspacesilent, 7
+##      bindd = $mainMod Alt, 8, $d move to workspace 8  (silent), movetoworkspacesilent, 8
+##      bindd = $mainMod Alt, 9, $d move to workspace 9  (silent), movetoworkspacesilent, 9
+##      bindd = $mainMod Alt, 0, $d move to workspace 10 (silent), movetoworkspacesilent, 10
 
+# Move focused window to a relative workspace
+##      $d=[$ws]
+##      bindd = $mainMod Control+Alt, Right, $d move window to next relative workspace , movetoworkspace, r+1
+##      bindd = $mainMod Control+Alt, Left, $d move window to previous relative workspace , movetoworkspace, r-1
 
+# Scroll through existing workspaces
+##      $d=[$ws|Navigation]
+##      bindd = $mainMod, mouse_down, $d next workspace, workspace, e+1
+##      bindd = $mainMod, mouse_up, $d previous workspace, workspace, e-1
+
+##      $d=[$ws|Navigation|Relative workspace]
+##      bindd = $mainMod Control, Right, $d change active workspace forwards  , workspace, r+1
+##      bindd = $mainMod Control, Left, $d change active workspace backwards , workspace, r-1
+
+#       $d=[$ws|Navigation]
+##      bindd = $mainMod Control, Down, $d navigate to the nearest empty workspace , workspace, empty
+
+##      $d=[$wm|Group Navigation]
+##      bindd = $mainMod Control, H, $d change active group backwards , changegroupactive, b
+##      bindd = $mainMod Control, L, $d change active group forwards  , changegroupactive, f
 
 $d=#! unset the group name
