--- a/Configs/.config/VSCodium/User/settings.json
+++ b/Configs/.config/VSCodium/User/settings.json
@@ -7,8 +7,8 @@
   "security.workspace.trust.startupPrompt": "never",
   "security.workspace.trust.enabled": false,
   "editor.minimap.side": "left",
-"editor.fontFamily": "'JetbrainsMono Nerd Font','Maple Mono', monospace",
-  "extensions.autoUpdate": false,
+  "editor.fontFamily": "'JetbrainsMono Nerd Font','Maple Mono', monospace",
+  "extensions.autoUpdate": true,
   "workbench.statusBar.visible": false,
   "terminal.external.linuxExec": "kitty",
   "terminal.explorerKind": "both",
@@ -22,7 +22,7 @@
   "codium.enterprise.onPremService.enable": true,
   "codium.codeCompletion.enable": true,
   "git.enableSmartCommit": true,
-  "git.confirmSync": false,
+  "git.confirmSync": true,
   "git.autofetch": true,
   "explorer.confirmDelete": false,
   "editor.minimap.enabled": false,
