--- a/Configs/.config/kitty/hyde.conf
+++ b/Configs/.config/kitty/hyde.conf
@@ -14,4 +14,4 @@ cursor_trail 1
 include theme.conf
 #background_opacity 0.60
 #hide_window_decorations yes
-#confirm_os_window_close 0
+confirm_os_window_close 0
