--- a/Configs/.config/kitty/kitty.conf
+++ b/Configs/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
 # map ctrl+shift+t            new_tab_with_cwd
 
 # Uncomment the following 4 lines to minimize kitty latency (higher energy usage)
-# input_delay 0
-# repaint_delay 2
-# sync_to_monitor no
-# wayland_enable_ime no
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
