--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -23,7 +23,7 @@ $mainMod = Super # super / meta / windows key
 $TERMINAL = kitty
 $EDITOR = vscodium
 $EXPLORER = dolphin
-# $BROWSER = firefox
+$BROWSER = firefox
 
 $wm=Window Management
 $d=[$wm]
