--- a/Configs/.config/hypr/hyde.conf
+++ b/Configs/.config/hypr/hyde.conf
@@ -27,11 +27,11 @@
 # █▀█ █▀▀ █▀▀ ▄█
 
 # $QUICKAPPS = # used for quick app launcher
-$BROWSER = brave # default browser, if commented out , will use the default browser
-$EDITOR = vscodium # default editor, if commented out , will use the default editor
+# $BROWSER = firefox # default browser, if commented out , will use the default browser
+# $EDITOR = code # default editor, if commented out , will use the default editor
 # $EXPLORER= dolphin # default file manager, if commented out , will use the default file manager
 # $TERMINAL = kitty # default terminal, if commented out , will use the org.gnome.desktop.default-applications.terminal
-# $LOCKSCREEN = hyprlock # default lockscreen, you can use any lockscreen you want, eg swaylock
+# $LOCKSCREEN=hyprlock # default lockscreen, you can use any lockscreen you want, eg swaylock
 # $IDLE=hypridle # default idle manager, you can use any idle manager you want,eg swayidle
 
 
