--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -23,12 +23,12 @@ $mainMod = Super # super / meta / windows key
 $TERMINAL = kitty
 $EDITOR = vscodium
 $EXPLORER = dolphin
-$BROWSER = brave
+$BROWSER = firefox
 
 $wm=Window Management
 $d=[$wm]
 bindd = $mainMod, Q, $d close focused window, exec, $scrPath/dontkillsteam.sh
-bindd = $mainMod Shift, Q, $d kill active proccess, exec, $scrPath/killactive.sh
+bindd = $mainMod Shift, Q, $d kill active, exec, $scrPath/killactive.sh
 bindd = $mainMod, Delete, $d kill hyprland session, exit
 bindd = $mainMod, Space, $d toggle float, togglefloating
 bind = $mainMod, F, fullscreen, 1
@@ -81,6 +81,7 @@ bindd = $mainMod, Return, $d terminal emulator , exec, $TERMINAL
 bindd = $mainMod, T, $d file explorer , exec, $EXPLORER
 bindd = $mainMod, E, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
+bindd = $mainMod, M, $d mpv player , exec, $scrPath/mpv_music.sh
 ##      bindd = $mainMod, =, $d system monitor , exec, $scrPath/sysmonlaunch.sh
 
 $d=[$l|Rofi menus]
