--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -102,17 +102,19 @@ binddl  = , xf86AudioMute,$d  toggle mute output, exec, $scrPath/volumecontrol.s
 binddl  = , xf86AudioMicMute,$d un/mute microphone  , exec, $scrPath/volumecontrol.sh -i m # toggle microphone mute
 binddel = , xf86AudioLowerVolume, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
 binddel = , xf86AudioRaiseVolume, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
+binde = , xf86KbdBrightnessDown, exec, $scrPath/key_brightness.sh --dec # decrease keyboard brightness
+binde = , xf86KbdBrightnessUp, exec, $scrPath/key_brightness.sh --inc # increase keyboard brightness
 ##       binddl  = , F10, $d toggle mute output , exec, $scrPath/volumecontrol.sh -o m # toggle audio mute
 ##       binddel = , F11, $d decrease volume , exec, $scrPath/volumecontrol.sh -o d # decrease volume
 ##       binddel = , F12, $d increase volume , exec, $scrPath/volumecontrol.sh -o i # increase volume
 
 $d=[$hc|Media]
-bindl = , xf86AudioPlayPause, exec, playerctl play-pause
-bindl = , xf86AudioPause, exec, playerctl play-pause
-bindl = , xf86AudioPlay, exec, playerctl play-pause
-bindl = , xf86AudioNext, exec, playerctl next
-bindl = , xf86AudioPrev, exec, playerctl previous
-bindl = , xf86audiostop, exec, playerctl stop
+bindl = , xf86AudioPlayPause, exec, $scrPath/media_ctrl.sh --pause
+bindl = , xf86AudioPause, exec, $scrPath/media_ctrl.sh --pause
+bindl = , xf86AudioPlay, exec, $scrPath/media_ctrl.sh --pause
+bindl = , xf86AudioNext, exec, $scrPath/media_ctrl.sh --nxt 
+bindl = , xf86AudioPrev, exec, $scrPath/media_ctrl.sh --prv
+bindl = , xf86audiostop, exec, $scrPAth/media_ctrl.sh --stop
 
 $d=[$hc|Brightness]
 binddel = , xf86MonBrightnessUp, $d increase brightness , exec, $scrPath/brightnesscontrol.sh i # increase brightness
