--- a/Configs/.config/starship/starship.toml
+++ b/Configs/.config/starship/starship.toml
@@ -3,72 +3,73 @@ add_newline = true
 format = """\
   󰣇 \
   $username\
-  $git_branch$git_commit$git_state $git_status\n\
+  $git_branch$git_commit$git_state $git_status\t\
+  $singularity\
+  $kubernetes\
+  $vcsh\
+  $hg_branch\
+  $pijul_channel\
+  $c\
+  $cmake\
+  $cobol\
+  $daml\
+  $dart\
+  $deno\
+  $dotnet\
+  $elixir\
+  $elm\
+  $erlang\
+  $fennel\
+  $golang\
+  $guix_shell\
+  $haskell\
+  $haxe\
+  $helm\
+  $java\
+  $julia\
+  $kotlin\
+  $gradle\
+  $lua\
+  $nim\
+  $nodejs\
+  $ocaml\
+  $opa\
+  $perl\
+  $php\
+  $pulumi\
+  $purescript\
+  $python\
+  $raku\
+  $rlang\
+  $red\
+  $ruby\
+  $rust\
+  $scala\
+  $solidity\
+  $swift\
+  $terraform\
+  $vlang\
+  $vagrant\
+  $zig\
+  $buf\
+  $conda\
+  $meson\
+  $spack\
+  $memory_usage\
+  $aws\
+  $gcloud\
+  $openstack\
+  $azure\
+  $crystal\
+  $custom\
+  $status\
+  $os\
+  $time\n\
   $directory \
   $character\
-  
+
 """
-right_format = """
-$singularity\
-$kubernetes\
-$vcsh\
-$hg_branch\
-$pijul_channel\
-$c\
-$cmake\
-$cobol\
-$daml\
-$dart\
-$deno\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$fennel\
-$golang\
-$guix_shell\
-$haskell\
-$haxe\
-$helm\
-$java\
-$julia\
-$kotlin\
-$gradle\
-$lua\
-$nim\
-$nodejs\
-$ocaml\
-$opa\
-$perl\
-$php\
-$pulumi\
-$purescript\
-$python\
-$raku\
-$rlang\
-$red\
-$ruby\
-$rust\
-$scala\
-$solidity\
-$swift\
-$terraform\
-$vlang\
-$vagrant\
-$zig\
-$buf\
-$conda\
-$meson\
-$spack\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
-$azure\
-$crystal\
-$custom\
-$status\
-$os"""
+
 
 continuation_prompt = '▶▶ '
 
