--- a/Configs/.config/hypr/themes/theme.conf
+++ b/Configs/.config/hypr/themes/theme.conf
@@ -1,42 +1,34 @@
-#  // P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME=Catppuccin-Mocha
-$ICON_THEME = Tela-circle-dracula
-$COLOR_SCHEME = prefer-dark
-
-# Optional: The varibles above will be set automatically when the theme is loaded
-# This exec commands will soon be deprecated
+$GTK_THEME=Kripton
+$ICON_THEME=Vivid-Glassy-Dark-Icons
+$CURSOR_THEME=Sweet-cursors
+$COLOR_SCHEME=prefer-dark
+$CURSOR_SIZE=20
 
 
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.inactive_border = rgba(b4befecc) rgba(6c7086cc) 45deg
+    gaps_in = 6
+    gaps_out = 12
+    border_size = 3
+    col.active_border = rgba(78c6ebff) rgba(8289a3ff) 45deg
+    col.inactive_border = rgba(7, 15, 42, 0.58)
     layout = dwindle
     resize_on_border = true
 }
 
-group {
-    col.border_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
-    col.border_locked_active = rgba(ca9ee6ff) rgba(f2d5cfff) 45deg
-    col.border_locked_inactive = rgba(b4befecc) rgba(6c7086cc) 45deg
-}
-
 decoration {
-    rounding = 10
-    shadow:enabled = false
+    rounding = 2
 
     blur {
         enabled = yes
-        size = 6
-        passes = 3
+        size = 4
+        passes = 2
         new_optimizations = on
         ignore_opacity = on
         xray = false
     }
 }
 
-layerrule = blur,waybar
+blurls = waybar
+
+
