--- a/Configs/.config/hypr/hyprlock/theme.conf
+++ b/Configs/.config/hypr/hyprlock/theme.conf
@@ -46,7 +46,7 @@ label {
 # USER AVATAR
 image {
     monitor =
-    path = "$HOME/.local/share/icons/logo.png"
+    path = $MPRIS_IMAGE
     size = 150 # lesser side if not 1:1 ratio
     reload_time = 0 # seconds between reloading, 0 to reload with SIGUSR2
     reload_cmd = # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
