--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "source": "~/.config/fastfetch/waifu.webp",
+        "source": "\"$(fastfetch.sh logo)\"",
         "type": "kitty",
         "height": 13,
         "width": 26,
@@ -114,9 +114,14 @@
             "keyColor": "blue"
         },
         {
+            "type": "custom",
+            "format": ">-----------<+>------------------------------------------<",
+            "outputColor": "separator"
+        },
+        {
             "type": "command",
             "key": "  ToDo     ",
-            "keyColor": "blue",
+            "keyColor": "red",
             "text": "echo $(todo)"
         },
         {
