--- a/Configs/.config/hypr/hyprlock/hyprlock.conf
+++ b/Configs/.config/hypr/hyprlock/hyprlock.conf
@@ -1,29 +1,27 @@
-#      ░▒▒▒░░░░░▓▓          ___________
-#    ░░▒▒▒░░░░░▓▓        //___________/
-#   ░░▒▒▒░░░░░▓▓     _   _ _    _ _____
-#   ░░▒▒░░░░░▓▓▓▓▓▓ | | | | |  | |  __/
-#    ░▒▒░░░░▓▓   ▓▓ | |_| | |_/ /| |___
-#     ░▒▒░░▓▓   ▓▓   \__  |____/ |____/
-#       ░▒▓▓   ▓▓  //____/
+# HyDE default layout
+# Wallbash generated layout
 
-$fontFamily = JetBrainsMono Nerd Font # We already have this font installed
-
-# Resolving custom fonts
-# Provide the font name and the download link separated by a pipe |
-# Run font.sh resolve $LAYOUT_PATH to install the font
+# Local Variables
+$fontFamily = JetBrainsMono Nerd Font
 $resolve.font=Anurati|https://font.download/dl/font/anurati.zip
 $resolve.font=Inter|https://github.com/rsms/inter/releases/download/v4.1/Inter-4.1.zip
+$fn_greet=echo "Good $(date +%H | awk '{if ($1 < 12) print "Morning"; else if ($1 < 18) print "Afternoon"; else print "Evening"}')"
 
+# GENERAL
+general {
+    no_fade_in = false
+    grace = 0
+    disable_loading_bar = true
+}
+
+# BACKGROUND
 background {
     monitor =
-    color = $wallbash_pry1_rgba
     path = $BACKGROUND_PATH
-    blur_size = 4
-    blur_passes = 3 # 0 disables blurring
-    noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
-    brightness = 0.8000
-    vibrancy = 0.2100
+    blur_passes = 0
+    contrast = 0.8916
+    brightness = 0.8916
+    vibrancy = 0.8916
     vibrancy_darkness = 0.0
 }
 
@@ -39,30 +37,30 @@ label {
     valign = center
 }
 
-# DATE
+# USER Greeting
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +"%B %d")"
-    color = $wallbash_2xa9_rgba
-    font_size = 35
-    font_family = $font_family Thin
-    position = 0, -20
+    text = cmd[update:60000] $fn_greet
+    color = $wallbash_4xa9_rgba
+    font_size = 20
+    font_family = Inter Display Medium
+    position = 0, 30
     halign = center
     valign = center
 }
 
 # TIME
 label {
-    monitor =
-   text = cmd[update:1000] echo "$(date +"%-I:%M %p")"
-    #text = $TIME
-    color = $wallbash_txt1_rgba
-    font_size = 20 #!
-    font_family = $font_family
-    position = 0, 150
-    halign = center
-    valign = bottom
+  monitor =
+  text = $TIME
+  color = $wallbash_3xa9_rgba
+  font_size = 50
+  font_family = $fontFamily
+  position = 0, -20
+  halign = center
+  valign = center
 }
+
 # INPUT FIELD
 input-field {
     monitor =
@@ -106,7 +104,6 @@ label {
     valign = bottom
 }
 
-
 # Battery Status if present
 label {
     monitor =
@@ -125,8 +122,23 @@ label {
     text = cmd[update:1000] $KEYBOARD_LAYOUT
     color = $wallbash_4xa9_rgba
     font_size = 20
-    font_family = Inter Display Medium
+    font_family = $fontFamily
     position = -2%, 1%
     halign = right
+    valign = bottom
+}
+
+# Weather
+#! Put the weather command last to lessen the load time of other modules
+label {
+    monitor =
+    text = cmd[update:18000000] $WEATHER_CMD
+    color = $wallbash_3xa9_rgba
+    font_size = 16
+    shadow_passes = 3
+    shadow_size = 1
+    font_family = JetBrains Mono Nerd, SF Pro Display Bold
+    position = 1%, 1%
+    halign = left
     valign = bottom
 }
