--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -114,7 +114,7 @@ bindl = , xf86AudioPause, exec, $scrPath/media_ctrl.sh --pause
 bindl = , xf86AudioPlay, exec, $scrPath/media_ctrl.sh --pause
 bindl = , xf86AudioNext, exec, $scrPath/media_ctrl.sh --nxt 
 bindl = , xf86AudioPrev, exec, $scrPath/media_ctrl.sh --prv
-bindl = , xf86audiostop, exec, $scrPAth/media_ctrl.sh --stop
+bindl = , xf86audiostop, exec, $scrPath/media_ctrl.sh --stop
 
 $d=[$hc|Brightness]
 binddel = , xf86MonBrightnessUp, $d increase brightness , exec, $scrPath/brightnesscontrol.sh i # increase brightness
@@ -145,6 +145,7 @@ bindd = $mainMod, K, $d next waybar layout , exec, $scrPath/wbarconfgen.sh n # n
 bindd = $mainMod Shift, K, $d previous waybar layout , exec, $scrPath/wbarconfgen.sh p # previous waybar mode
 bindd = $mainMod Shift, Backspace, $d wallbash mode selector , exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
 bindd = $mainMod, Backspace, $d select a theme, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
+bindd = $mainMod, D, $d select animation, exec, $scrPath/animations.sh --select # launch animation select menu
 ##      bindd = $mainMod Alt, Right, $d next global wallpaper , exec, $scrPath/wallpaper.sh -Gn # next global wallpaper
 ##      bindd = $mainMod Alt, Left, $d previous global wallpaper , exec, $scrPath/wallpaper.sh -Gp # previous global wallpaper
 
