--- a/Configs/.config/hypr/hypridle.conf
+++ b/Configs/.config/hypr/hypridle.conf
@@ -46,5 +46,5 @@ listener {
 # hyprlang noerror true
 # Source anything  from this path if you want to add your own listener
 # source command actually do not exist yet
-source = ~/.config/hypridle/*
+# source = ~/.config/hypridle/*
 # hyprlang noerror false
