--- a/Configs/.config/ranger/rc.conf
+++ b/Configs/.config/ranger/rc.conf
@@ -170,7 +170,7 @@ set draw_borders both
 set dirname_in_tabs false
 
 # Enable the mouse support?
-set mouse_enabled true
+set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
@@ -305,7 +305,7 @@ set global_inode_type_filter
 set freeze_files false
 
 # Print file sizes in bytes instead of the default human-readable format.
-set size_in_bytes false
+set size_in_bytes true
 
 # Warn at startup if RANGER_LEVEL env var is greater than 0, in other words
 # give a warning when you nest ranger in a subshell started by ranger.
