--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -9,25 +9,25 @@
 # // █ █░▀█ █▀▀ █▄█ ░█░
 
 
-# input {
+input {
 # # See https://wiki.hyprland.org/Configuring/Variables/#input
-#     kb_layout = us
-#     follow_mouse = 1
-#     sensitivity = 0
-#     force_no_accel = 1
-#     numlock_by_default = true
+    # kb_layout = us
+    # follow_mouse = 1
+    # sensitivity = 0
+    # force_no_accel = 0
+    # accel_profile = flat
+    numlock_by_default = true
 
-#     touchpad {
 # # See https://wiki.hyprland.org/Configuring/Variables/#touchpad
-#         natural_scroll = no
-#     }
+    touchpad {
+        natural_scroll = no
+    }
 
-# }
+}
 
-
-# gestures {
 # # See https://wiki.hyprland.org/Configuring/Variables/#gestures
+gestures {
 #     workspace_swipe = true
 #     workspace_swipe_fingers = 3
-# }
+}
 
