--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -21,7 +21,7 @@ $mainMod = Super # super / meta / windows key
 
 # Assign apps
 $TERMINAL = kitty
-$EDITOR = vscodium
+$EDITOR = cursor
 $EXPLORER = dolphin
 $BROWSER = firefox
 
