--- a/Configs/.config/VSCodium/User/settings.json
+++ b/Configs/.config/VSCodium/User/settings.json
@@ -1,5 +1,6 @@
 {
   "workbench.colorTheme": "Wallbash",
+  "window.menuBarVisibility": "toggle",
   "editor.fontSize": 12,
   "editor.scrollbar.vertical": "hidden",
   "editor.scrollbar.verticalScrollbarSize": 0,
@@ -14,6 +15,7 @@
   "terminal.explorerKind": "both",
   "terminal.sourceControlRepositoriesKind": "both",
   "telemetry.telemetryLevel": "off",
+  "workbench.activityBar.location": "top",
   "window.customTitleBarVisibility": "auto",
   "chat.commandCenter.enabled": false,
   "workbench.startupEditor": "none",
