--- a/Configs/.config/hypr/userprefs.conf
+++ b/Configs/.config/hypr/userprefs.conf
@@ -9,25 +9,27 @@
 # // █ █░▀█ █▀▀ █▄█ ░█░
 
 
+#  Uncomment to enable // change to a preferred value
+# 🔗 See https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-# # See https://wiki.hyprland.org/Configuring/Variables/#input
     # kb_layout = us
     # follow_mouse = 1
     # sensitivity = 0
     # force_no_accel = 0
-    # accel_profile = flat
-    numlock_by_default = true
+    # accel_profile = flat 
+    # numlock_by_default = true
 
-# # See https://wiki.hyprland.org/Configuring/Variables/#touchpad
+    # 🔗 See https://wiki.hyprland.org/Configuring/Variables/#touchpad
     touchpad {
         natural_scroll = no
     }
 
 }
 
-# # See https://wiki.hyprland.org/Configuring/Variables/#gestures
+
+
+# 🔗 See https://wiki .hyprland.org/Configuring/Variables/#gestures
 gestures {
 #     workspace_swipe = true
 #     workspace_swipe_fingers = 3
 }
-
