--- a/Configs/.config/hypr/windowrules.conf
+++ b/Configs/.config/hypr/windowrules.conf
@@ -8,8 +8,14 @@
 # This symbol indicates that the following values will override the default configuration
 $&=override
 
+windowrulev2 = idleinhibit fullscreen, class:.* 
+
 windowrulev2 = opacity 0.90 $& 0.90 $& 1,class:^(firefox)$
 windowrulev2 = opacity 0.90 $& 0.90 $& 1,class:^(Brave-browser)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-oss)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^([Cc]ode)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-url-handler)$
+windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(code-insiders-url-handler)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(kitty)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 $& 0.80 $& 1,class:^(org.kde.ark)$
