--- a/Configs/.config/hypr/themes/colors.conf
+++ b/Configs/.config/hypr/themes/colors.conf
@@ -3,109 +3,109 @@
 
 # Color group 1
 
-$wallbash_pry1 = 0F131B    # primary color 1
+$wallbash_pry1 = 0F1A2A    # primary color 1
 $wallbash_txt1 = FFFFFF    # text color 1
-$wallbash_1xa1 = 293652    # accent color 1 for primary color 1
-$wallbash_1xa2 = 3A4A6B    # accent color 2 for primary color 1
-$wallbash_1xa3 = 4B5C7D    # accent color 3 for primary color 1
-$wallbash_1xa4 = 576A8F    # accent color 4 for primary color 1
-$wallbash_1xa5 = 657AA3    # accent color 5 for primary color 1
-$wallbash_1xa6 = 7A92C2    # accent color 6 for primary color 1
-$wallbash_1xa7 = 9AB3E6    # accent color 7 for primary color 1
-$wallbash_1xa8 = AAC1F0    # accent color 8 for primary color 1
-$wallbash_1xa9 = CCDDFF    # accent color 9 for primary color 1
+$wallbash_1xa1 = 213552    # accent color 1 for primary color 1
+$wallbash_1xa2 = 2D466B    # accent color 2 for primary color 1
+$wallbash_1xa3 = 37537D    # accent color 3 for primary color 1
+$wallbash_1xa4 = 42618F    # accent color 4 for primary color 1
+$wallbash_1xa5 = 4E71A3    # accent color 5 for primary color 1
+$wallbash_1xa6 = 6188C2    # accent color 6 for primary color 1
+$wallbash_1xa7 = 77A4E6    # accent color 7 for primary color 1
+$wallbash_1xa8 = 81AEF0    # accent color 8 for primary color 1
+$wallbash_1xa9 = 8FBDFF    # accent color 9 for primary color 1
 
 # in rgba format
-$wallbash_pry1_rgba = rgba(15,19,27,0.95)    # primary color 1
+$wallbash_pry1_rgba = rgba(15,26,42,0.95)    # primary color 1
 $wallbash_txt1_rgba = rgba(255,255,255,0.95)    # text color 1
-$wallbash_1xa1_rgba = rgba(41,54,82,0.95)    # accent color 1 for primary color 1
-$wallbash_1xa2_rgba = rgba(58,74,107,0.95)    # accent color 2 for primary color 1
-$wallbash_1xa3_rgba = rgba(75,92,125,0.95)    # accent color 3 for primary color 1
-$wallbash_1xa4_rgba = rgba(87,106,143,0.95)    # accent color 4 for primary color 1
-$wallbash_1xa5_rgba = rgba(101,122,163,0.95)    # accent color 5 for primary color 1
-$wallbash_1xa6_rgba = rgba(122,146,194,0.95)    # accent color 6 for primary color 1
-$wallbash_1xa7_rgba = rgba(154,179,230,0.95)    # accent color 7 for primary color 1
-$wallbash_1xa8_rgba = rgba(170,193,240,0.95)    # accent color 8 for primary color 1
-$wallbash_1xa9_rgba = rgba(204,221,255,0.95)    # accent color 9 for primary color 1
+$wallbash_1xa1_rgba = rgba(33,53,82,0.95)    # accent color 1 for primary color 1
+$wallbash_1xa2_rgba = rgba(45,70,107,0.95)    # accent color 2 for primary color 1
+$wallbash_1xa3_rgba = rgba(55,83,125,0.95)    # accent color 3 for primary color 1
+$wallbash_1xa4_rgba = rgba(66,97,143,0.95)    # accent color 4 for primary color 1
+$wallbash_1xa5_rgba = rgba(78,113,163,0.95)    # accent color 5 for primary color 1
+$wallbash_1xa6_rgba = rgba(97,136,194,0.95)    # accent color 6 for primary color 1
+$wallbash_1xa7_rgba = rgba(119,164,230,0.95)    # accent color 7 for primary color 1
+$wallbash_1xa8_rgba = rgba(129,174,240,0.95)    # accent color 8 for primary color 1
+$wallbash_1xa9_rgba = rgba(143,189,255,0.95)    # accent color 9 for primary color 1
 
 
 # Color group 2
 
-$wallbash_pry2 = 2B3345    # primary color 2
+$wallbash_pry2 = 506182    # primary color 2
 $wallbash_txt2 = FFFFFF    # text color 2
-$wallbash_2xa1 = 293552    # accent color 1 for primary color 2
-$wallbash_2xa2 = 3A496B    # accent color 2 for primary color 2
-$wallbash_2xa3 = 4B5A7D    # accent color 3 for primary color 2
-$wallbash_2xa4 = 57688F    # accent color 4 for primary color 2
-$wallbash_2xa5 = 6578A3    # accent color 5 for primary color 2
-$wallbash_2xa6 = 7A90C2    # accent color 6 for primary color 2
-$wallbash_2xa7 = 9AB1E6    # accent color 7 for primary color 2
-$wallbash_2xa8 = AAC0F0    # accent color 8 for primary color 2
-$wallbash_2xa9 = CCDCFF    # accent color 9 for primary color 2
+$wallbash_2xa1 = 213152    # accent color 1 for primary color 2
+$wallbash_2xa2 = 2D426B    # accent color 2 for primary color 2
+$wallbash_2xa3 = 374F7D    # accent color 3 for primary color 2
+$wallbash_2xa4 = 425C8F    # accent color 4 for primary color 2
+$wallbash_2xa5 = 4E6BA3    # accent color 5 for primary color 2
+$wallbash_2xa6 = 6182C2    # accent color 6 for primary color 2
+$wallbash_2xa7 = 779DE6    # accent color 7 for primary color 2
+$wallbash_2xa8 = 81A7F0    # accent color 8 for primary color 2
+$wallbash_2xa9 = 8FB5FF    # accent color 9 for primary color 2
 
 # in rgba format
-$wallbash_pry2_rgba = rgba(43,51,69,0.95)    # primary color 2
+$wallbash_pry2_rgba = rgba(80,97,130,0.95)    # primary color 2
 $wallbash_txt2_rgba = rgba(255,255,255,0.95)    # text color 2
-$wallbash_2xa1_rgba = rgba(41,53,82,0.95)    # accent color 1 for primary color 2
-$wallbash_2xa2_rgba = rgba(58,73,107,0.95)    # accent color 2 for primary color 2
-$wallbash_2xa3_rgba = rgba(75,90,125,0.95)    # accent color 3 for primary color 2
-$wallbash_2xa4_rgba = rgba(87,104,143,0.95)    # accent color 4 for primary color 2
-$wallbash_2xa5_rgba = rgba(101,120,163,0.95)    # accent color 5 for primary color 2
-$wallbash_2xa6_rgba = rgba(122,144,194,0.95)    # accent color 6 for primary color 2
-$wallbash_2xa7_rgba = rgba(154,177,230,0.95)    # accent color 7 for primary color 2
-$wallbash_2xa8_rgba = rgba(170,192,240,0.95)    # accent color 8 for primary color 2
-$wallbash_2xa9_rgba = rgba(204,220,255,0.95)    # accent color 9 for primary color 2
+$wallbash_2xa1_rgba = rgba(33,49,82,0.95)    # accent color 1 for primary color 2
+$wallbash_2xa2_rgba = rgba(45,66,107,0.95)    # accent color 2 for primary color 2
+$wallbash_2xa3_rgba = rgba(55,79,125,0.95)    # accent color 3 for primary color 2
+$wallbash_2xa4_rgba = rgba(66,92,143,0.95)    # accent color 4 for primary color 2
+$wallbash_2xa5_rgba = rgba(78,107,163,0.95)    # accent color 5 for primary color 2
+$wallbash_2xa6_rgba = rgba(97,130,194,0.95)    # accent color 6 for primary color 2
+$wallbash_2xa7_rgba = rgba(119,157,230,0.95)    # accent color 7 for primary color 2
+$wallbash_2xa8_rgba = rgba(129,167,240,0.95)    # accent color 8 for primary color 2
+$wallbash_2xa9_rgba = rgba(143,181,255,0.95)    # accent color 9 for primary color 2
 
 # Color group 3
 
-$wallbash_pry3 = 697387    # primary color 3
-$wallbash_txt3 = FEFEFE    # text color 3
-$wallbash_3xa1 = 293652    # accent color 1 for primary color 3
-$wallbash_3xa2 = 3A4A6B    # accent color 2 for primary color 3
-$wallbash_3xa3 = 4B5C7D    # accent color 3 for primary color 3
-$wallbash_3xa4 = 576A8F    # accent color 4 for primary color 3
-$wallbash_3xa5 = 657AA3    # accent color 5 for primary color 3
-$wallbash_3xa6 = 7A92C2    # accent color 6 for primary color 3
-$wallbash_3xa7 = 9AB3E6    # accent color 7 for primary color 3
-$wallbash_3xa8 = AAC1F0    # accent color 8 for primary color 3
-$wallbash_3xa9 = CCDDFF    # accent color 9 for primary color 3
+$wallbash_pry3 = 695476    # primary color 3
+$wallbash_txt3 = FFFFFF    # text color 3
+$wallbash_3xa1 = 3F2152    # accent color 1 for primary color 3
+$wallbash_3xa2 = 532D6B    # accent color 2 for primary color 3
+$wallbash_3xa3 = 62377D    # accent color 3 for primary color 3
+$wallbash_3xa4 = 71428F    # accent color 4 for primary color 3
+$wallbash_3xa5 = 834EA3    # accent color 5 for primary color 3
+$wallbash_3xa6 = 9D61C2    # accent color 6 for primary color 3
+$wallbash_3xa7 = BB77E6    # accent color 7 for primary color 3
+$wallbash_3xa8 = C681F0    # accent color 8 for primary color 3
+$wallbash_3xa9 = D48FFF    # accent color 9 for primary color 3
 
 # in rgba format
-$wallbash_pry3_rgba = rgba(105,115,135,0.95)    # primary color 3
-$wallbash_txt3_rgba = rgba(254,254,254,0.95)    # text color 3
-$wallbash_3xa1_rgba = rgba(41,54,82,0.95)    # accent color 1 for primary color 3
-$wallbash_3xa2_rgba = rgba(58,74,107,0.95)    # accent color 2 for primary color 3
-$wallbash_3xa3_rgba = rgba(75,92,125,0.95)    # accent color 3 for primary color 3
-$wallbash_3xa4_rgba = rgba(87,106,143,0.95)    # accent color 4 for primary color 3
-$wallbash_3xa5_rgba = rgba(101,122,163,0.95)    # accent color 5 for primary color 3
-$wallbash_3xa6_rgba = rgba(122,146,194,0.95)    # accent color 6 for primary color 3
-$wallbash_3xa7_rgba = rgba(154,179,230,0.95)    # accent color 7 for primary color 3
-$wallbash_3xa8_rgba = rgba(170,193,240,0.95)    # accent color 8 for primary color 3
-$wallbash_3xa9_rgba = rgba(204,221,255,0.95)    # accent color 9 for primary color 3
+$wallbash_pry3_rgba = rgba(105,84,118,0.95)    # primary color 3
+$wallbash_txt3_rgba = rgba(255,255,255,0.95)    # text color 3
+$wallbash_3xa1_rgba = rgba(63,33,82,0.95)    # accent color 1 for primary color 3
+$wallbash_3xa2_rgba = rgba(83,45,107,0.95)    # accent color 2 for primary color 3
+$wallbash_3xa3_rgba = rgba(98,55,125,0.95)    # accent color 3 for primary color 3
+$wallbash_3xa4_rgba = rgba(113,66,143,0.95)    # accent color 4 for primary color 3
+$wallbash_3xa5_rgba = rgba(131,78,163,0.95)    # accent color 5 for primary color 3
+$wallbash_3xa6_rgba = rgba(157,97,194,0.95)    # accent color 6 for primary color 3
+$wallbash_3xa7_rgba = rgba(187,119,230,0.95)    # accent color 7 for primary color 3
+$wallbash_3xa8_rgba = rgba(198,129,240,0.95)    # accent color 8 for primary color 3
+$wallbash_3xa9_rgba = rgba(212,143,255,0.95)    # accent color 9 for primary color 3
 
 # Color group 4
 
-$wallbash_pry4 = EDEEF2    # primary color 4
-$wallbash_txt4 = 030302    # text color 4
-$wallbash_4xa1 = 293152    # accent color 1 for primary color 4
-$wallbash_4xa2 = 3A446B    # accent color 2 for primary color 4
-$wallbash_4xa3 = 4B557D    # accent color 3 for primary color 4
-$wallbash_4xa4 = 57628F    # accent color 4 for primary color 4
-$wallbash_4xa5 = 6572A3    # accent color 5 for primary color 4
-$wallbash_4xa6 = 7A88C2    # accent color 6 for primary color 4
-$wallbash_4xa7 = 9AA9E6    # accent color 7 for primary color 4
-$wallbash_4xa8 = AAB8F0    # accent color 8 for primary color 4
-$wallbash_4xa9 = CCD6FF    # accent color 9 for primary color 4
+$wallbash_pry4 = D1768B    # primary color 4
+$wallbash_txt4 = 0E0F0F    # text color 4
+$wallbash_4xa1 = 52212C    # accent color 1 for primary color 4
+$wallbash_4xa2 = 6B2D3B    # accent color 2 for primary color 4
+$wallbash_4xa3 = 7D3747    # accent color 3 for primary color 4
+$wallbash_4xa4 = 8F4253    # accent color 4 for primary color 4
+$wallbash_4xa5 = A34E62    # accent color 5 for primary color 4
+$wallbash_4xa6 = C26177    # accent color 6 for primary color 4
+$wallbash_4xa7 = E67791    # accent color 7 for primary color 4
+$wallbash_4xa8 = F0819B    # accent color 8 for primary color 4
+$wallbash_4xa9 = FF8FA9    # accent color 9 for primary color 4
 
 # in rgba format
-$wallbash_pry4_rgba = rgba(237,238,242,0.95)    # primary color 4
-$wallbash_txt4_rgba = rgba(3,3,2,0.95)    # text color 4
-$wallbash_4xa1_rgba = rgba(41,49,82,0.95)    # accent color 1 for primary color 4
-$wallbash_4xa2_rgba = rgba(58,68,107,0.95)    # accent color 2 for primary color 4
-$wallbash_4xa3_rgba = rgba(75,85,125,0.95)    # accent color 3 for primary color 4
-$wallbash_4xa4_rgba = rgba(87,98,143,0.95)    # accent color 4 for primary color 4
-$wallbash_4xa5_rgba = rgba(101,114,163,0.95)    # accent color 5 for primary color 4
-$wallbash_4xa6_rgba = rgba(122,136,194,0.95)    # accent color 6 for primary color 4
-$wallbash_4xa7_rgba = rgba(154,169,230,0.95)    # accent color 7 for primary color 4
-$wallbash_4xa8_rgba = rgba(170,184,240,0.95)    # accent color 8 for primary color 4
-$wallbash_4xa9_rgba = rgba(204,214,255,0.95)    # accent color 9 for primary color 4
+$wallbash_pry4_rgba = rgba(209,118,139,0.95)    # primary color 4
+$wallbash_txt4_rgba = rgba(14,15,15,0.95)    # text color 4
+$wallbash_4xa1_rgba = rgba(82,33,44,0.95)    # accent color 1 for primary color 4
+$wallbash_4xa2_rgba = rgba(107,45,59,0.95)    # accent color 2 for primary color 4
+$wallbash_4xa3_rgba = rgba(125,55,71,0.95)    # accent color 3 for primary color 4
+$wallbash_4xa4_rgba = rgba(143,66,83,0.95)    # accent color 4 for primary color 4
+$wallbash_4xa5_rgba = rgba(163,78,98,0.95)    # accent color 5 for primary color 4
+$wallbash_4xa6_rgba = rgba(194,97,119,0.95)    # accent color 6 for primary color 4
+$wallbash_4xa7_rgba = rgba(230,119,145,0.95)    # accent color 7 for primary color 4
+$wallbash_4xa8_rgba = rgba(240,129,155,0.95)    # accent color 8 for primary color 4
+$wallbash_4xa9_rgba = rgba(255,143,169,0.95)    # accent color 9 for primary color 4
