--- a/Configs/.local/share/hyde/hyprland.conf
+++ b/Configs/.local/share/hyde/hyprland.conf
@@ -196,7 +196,7 @@ animations {
 
 input {
     # See https://wiki.hyprland.org/Configuring/Variables/#input
-    accel_profile = flat
+    accel_profile = flat 
     numlock_by_default = true
 }
 
@@ -370,13 +370,14 @@ $dConf = $dConf monospace-font-name='$MONOSPACE_FONT $MONOSPACE_FONT_SIZE'\n
 $dConf = $dConf font-antialiasing='$FONT_ANTIALIASING'\n
 $dConf = $dConf font-hinting='$FONT_HINTING'\n
 $dConf = $dConf [org/gnome/desktop/default-applications/terminal]\nexec='$(which $TERMINAL)'
-# $dconf.preserve =  dconf dump / > $dconFile
+$dconf.preserve =  dconf dump / > $dconFile
 $dconf.populate =  printf "$dConf" >> $dconFile
-# $dconf.reset = dconf reset -f / < $dconFile #! use dconf update instead
+$dconf.reset = dconf reset -f / < $dconFile #! Use this as dconf update won't refresh when key-val is the same
 $dconf.load = dconf load -f / < $dconFile
-$dconf.update = dconf update
+# $dconf.update = dconf update
 $set.hyprCursor = hyprctl setcursor $CURSOR_THEME $CURSOR_SIZE
-$exec.dConf = ( $dconf.populate && $dconf.load && $dconf.update && $set.hyprCursor ) 
+# $exec.dConf = ( $dconf.populate && $dconf.load && $dconf.update && $set.hyprCursor ) 
+$exec.dConf = ( $dconf.preserve && $dconf.populate && $dconf.reset && $dconf.load && $set.hyprCursor ) 
 
 $exec.keybinds_hint =  $scrPath/keybinds.hint.py --format rofi > $env.XDG_RUNTIME_DIR/hyde/keybinds_hint.rofi
 
@@ -387,8 +388,6 @@ exec = $exec.mkdir & $set.env & $exec.animation & $exec.keybinds_hint
 # // █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # // █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
-exec-once = $exec.dConf
-exec-once = $exec.mkdir & $set.env & $exec.animation & $exec.keybinds_hint
 exec-once = $start.XDG_PORTAL_RESET # reset XDPH for screenshare
 exec-once = $start.DBUS_SHARE_PICKER # for XDPHgl
 exec-once = $start.SYSTEMD_SHARE_PICKER # for XDPH
@@ -405,7 +404,9 @@ exec-once = $start.BATTERY_NOTIFY # battery notification
 exec-once = $start.IDLE_DAEMON # idle daemon
 
 # hyde/config.toml is parsed and exported to the environment
-exec-once = $scrPath/parse.config.py --daemon --input $env.XDG_CONFIG_HOME/hyde/config.toml --env $env.XDG_STATE_HOME/hyde/config --hypr $env.XDG_STATE_HOME/hyde/hyprland.conf
+# exec-once = $scrPath/parse.config.py --daemon --input $env.XDG_CONFIG_HOME/hyde/config.toml --env $env.XDG_STATE_HOME/hyde/config --hypr $env.XDG_STATE_HOME/hyde/hyprland.conf
+exec-once = systemctl --user start hyde-config.service #! If this is not working try the command above!
+
 
 #? Rules can be added here as most of the configuration are dynamic
 
