Arch-hyprland::Fastfecth

--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -21,7 +21,7 @@
         "break",
         {
             "type": "kernel",
-            "key": "    HyDE    ",
+            "key": "Void-Strike",
             "keyColor": "magenta"
         },
         {
